# AutoMakeExample

./: Makefile  config.status  libtool
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
mp3-2.0/: Makefile  Makefile.am  config.h  config.status  configure  configure.ac
mp3-2.0/src/: Makefile  Makefile.am  Makefile.in
mp3-2.0/src/app/: Makefile  Makefile.am  mp3
mp3-2.0/src/app/.libs/: lt-mp3  mp3
mp3-2.0/src/inc/: Makefile
mp3-2.0/src/lcd/: Makefile  Makefile.am
mp3-2.0/src/math/: Makefile  Makefile.in  libmath.la  libmath_la-math.lo
mp3-2.0/src/math/.libs/: libmath.so.0.0.0
mp3-2.0/src/media/: Makefile  Makefile.am  Makefile.in
mp3-2.0/src/media/.deps/: libmedia_a-media.Po
mp3-2.0/src/usb/: Makefile  Makefile.am  Makefile.in
src/: Makefile
src/app/: Makefile  Makefile.in  mp3
src/app/.deps/: mp3-player.Po
src/app/.libs/: lt-mp3  mp3
src/inc/: Makefile  Makefile.am  Makefile.in
src/lcd/: Makefile  Makefile.in
src/lcd/.deps/: liblcd_a-lcd.Po
src/math/: Makefile  Makefile.am
src/math/.deps/: libmath_la-math.Plo
src/math/.libs/: libmath.lai  libmath.so.0.0.0
src/media/: Makefile
src/usb/: Makefile
src/usb/.deps/: libusb_a-usb.Po
